Mon Mar 16 04:34:09 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/unite/Log_Format_Data_Entry.h:
        * cuts/utils/unite/Log_Format_Data_Entry.cpp:
        * cuts/utils/unite/Unit_Test_Evaluator.h:
        * cuts/utils/unite/Unit_Test_Evaluator.cpp:
        * cuts/utils/unite/Unite_App.cpp:

          . Re-designed the evaluator such that for a give test
            database, a single variable database is created. Each
            unit test creates a single table in the variable database.

Sun Mar 15 23:18:35 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * tests/cuts/java:
        * tests/cuts/java/cuts:

          . Location of the Java-based CUTS tests.

        * tests/cuts/java/cuts/ExponentialPeriodicTaskTest.java:

          . Simple test to determine if the exponential event strategy
            is working correctly.

Sun Mar 15 23:11:26 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CAPI/CAPI_Event_Impl_Generator.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CAPI/CAPI_Event_Impl_Generator.cpp:

          . Bug fix where some of the generated code included excerpts
            of example code that was used to determine what code to
            generate.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CAPI/CAPI_Ctx.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CAPI/CAPI_Ctx.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CAPI/CAPI_Generators.cpp:

          . Updated the code generators to handle the new semantics
            of PeriodicEvent elements in the PICML model.

        * cuts/java/CUTS/ConstantPeriodicTaskStrategy.java:
        * cuts/java/CUTS/ExponentialPeriodicTaskStrategy.java:
        * cuts/java/CUTS/PeriodicTask.java:
        * cuts/java/CUTS/PeriodicTaskHandler.java:
        * cuts/java/CUTS/PeriodicTaskHandlerFactory.java: